--- a/package.json
+++ b/package.json
@@ -4,28 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "init": "kintone-customize-uploader init",
     "start": "node scripts/npm-start.js",
     "upload": "kintone-customize-uploader --watch dest/customize-manifest.json",
     "develop": "npm run build -- --watch",
     "build": "webpack",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "lint": "eslint src/js/customize.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "RyBB",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
-    "@cybozu/eslint-config": "^11.0.3",
-    "@kintone/customize-uploader": "^3.0.11",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@cybozu/eslint-config": "^12.0.2",
+    "@kintone/customize-uploader": "^3.1.11",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.8.0",
-    "eslint": "^7.14.0",
+    "core-js": "^3.10.1",
+    "css-loader": "^5.2.1",
+    "eslint": "^7.24.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "mini-css-extract-plugin": "^1.4.1",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "regenerator-runtime": "^0.13.7",
-    "typescript": "^4.1.2",
-    "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0"
+    "sass-loader": "^11.0.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0"
   }
 }
