--- a/dest/customize-manifest.json
+++ b/dest/customize-manifest.json
@@ -1,14 +1,12 @@
 {
-    "app": "955",
-    "scope": "ALL",
-    "desktop": {
-        "js": [
-            "dist/js/customize.js"
-        ],
-        "css": []
-    },
-    "mobile": {
-        "js": [],
-        "css": []
-    }
+  "app": "955",
+  "scope": "ALL",
+  "desktop": {
+    "js": ["dist/js/customize.js"],
+    "css": ["dist/css/style.css"]
+  },
+  "mobile": {
+    "js": [],
+    "css": []
+  }
 }
