--- a/package.json
+++ b/package.json
@@ -16,31 +16,29 @@
   "author": "RyBB",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "7.13.16",
-    "@babel/preset-env": "7.13.15",
-    "@cybozu/eslint-config": "12.0.2",
-    "@kintone/customize-uploader": "3.1.14",
-    "autoprefixer": "^10.3.4",
-    "babel-loader": "8.2.2",
-    "core-js": "3.10.2",
-    "css-loader": "^5.2.4",
-    "eslint": "7.24.0",
+    "@babel/core": "7.16.7",
+    "@babel/preset-env": "7.16.8",
+    "@cybozu/eslint-config": "16.0.1",
+    "@kintone/customize-uploader": "5.0.18",
+    "autoprefixer": "^10.4.2",
+    "babel-loader": "8.2.3",
+    "core-js": "3.20.2",
+    "css-loader": "^6.5.1",
+    "eslint": "8.6.0",
     "eslint-config-google": "0.14.0",
-    "eslint-plugin-import": "2.23.1",
+    "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
-    "mini-css-extract-plugin": "1.5.0",
-    "node-sass": "^5.0.0",
+    "eslint-plugin-promise": "6.0.0",
+    "mini-css-extract-plugin": "2.4.6",
+    "node-sass": "^7.0.1",
     "npm-run-all": "4.1.5",
-    "postcss": "^8.3.6",
-    "postcss-loader": "^6.1.1",
-    "prettier": "2.2.1",
-    "regenerator-runtime": "0.13.7",
-    "sass-loader": "^11.1.1",
-    "style-loader": "^3.2.1",
-    "typescript": "4.2.4",
-    "webpack": "^5.35.0",
-    "webpack-cli": "4.6.0",
+    "postcss-loader": "^6.2.1",
+    "prettier": "2.5.1",
+    "regenerator-runtime": "0.13.9",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
     "webpack-fix-style-only-entries": "^0.6.1"
   }
 }
